--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Cadastrar Projeto</h1>
 <%= link_to 'Projetos', projects_path %>
 
-<%= form_with(url: "/projects/create", method: "post", local: true) do |form|%>
+<%= form_with(model: @project, url: "/projects", method: "post") do |form|%>
   <label>Titulo</label>
   <%= form.text_field(:title) %>
   <label>Descriçao</label>
