--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,11 +1,27 @@
 <h1>Editar Projeto</h1>
 <%= link_to 'Projetos', projects_path %>
 
-<%= form_with(model: @project, url: "/projects/#{@project.id}", method: :post) do |form|%>
-  <label>Titulo</label>
-  <%= form.text_field(:title) %>
-  <label>Descriçao</label>
-  <%= form.text_field(:description) %>
-  </br>
-  <%= submit_tag("Enviar") %>
+<%= form_with(model: @project, url: project_path(@project), method: :put, class: 'w-full max-w-lg') do |form|%>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+        Titulo
+      </label>
+      <%= form.text_field(:title, class: 'appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500') %>
+    </div>
+  </div>
+  <div class="flex flex-wrap -mx-3 mb-6">
+    <div class="w-full px-3">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+        Descriçao
+      </label>
+      <%= form.text_field(:description, class: 'appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500') %>
+    </div>
+  </div>
+  <div class="md:flex md:items-center">
+    <div class="md:w-1/3"></div>
+    <div class="md:w-2/3">
+      <%= submit_tag("Editar", class: 'shadow bg-blue-500 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded') %>
+    </div>
+  </div>
 <% end %>
