--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,26 @@
-<h1>Listagem de projetos</h1> 
-
-<%# <%= link_to 'Novo Projeto', projects_new_path %>
-
-<p>Opa, bem vindo</p>
-
-<% @projects.each do |project| %>
-  ID: <%= project.id %> <br>
-  Titulo = <%= project.title %> 
-  <br>
-  Descriçao = <%= project.description %>
-<br>
-<br>
-<% end %>
+<!-- component -->
+<div class="w-2/3 mx-auto">
+  <div class="bg-white shadow-md rounded my-6">
+    <table class="text-left w-full border-collapse"> <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
+      <thead>
+        <tr>
+          <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Titulo</th>
+          <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Descriçao</th>
+          <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Acao</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @projects.each do |project| %>
+          <tr class="hover:bg-grey-lighter">
+            <td class="py-4 px-6 border-b border-grey-light"><%= project.title %></td>
+            <td class="py-4 px-6 border-b border-grey-light"><%= project.description %></td>
+            <td class="py-4 px-6 border-b border-grey-light">
+              <%= link_to 'Editar', edit_project_path(project), class: 'text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark' %>
+              <a href="#" class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-blue hover:bg-blue-dark">View</a>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
