--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="bg-gray-900 font-sans leading-normal tracking-normal mt-12">
+    <%= render "layouts/application_navbar" %>
+    <%= render "layouts/application_menu" %>
+    <div class="main-content flex-1 bg-gray-100 mt-12 md:mt-2 pb-24 md:pb-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
